refactor: Refactor seluruh codebase untuk clean code dan best practices