@@ -10,9 +10,11 @@ import java.text.NumberFormat;
 import java.time.format.DateTimeFormatter;
 import java.util.Locale;
 
+/**
+ * Custom ListCell untuk menampilkan riwayat pembayaran yang sudah terverifikasi
+ */
 public class PembayaranRiwayatCell extends ListCell<Pesanan> {
-    
-    // FIELDS
+
     private final VBox cardContainer = new VBox();
     private final Label orderIdLabel = new Label();
     private final Label metodeLabel = new Label();
@@ -23,18 +25,18 @@ public class PembayaranRiwayatCell extends ListCell<Pesanan> {
 
     private final HBox headerBox = new HBox();
     private final GridPane infoGrid = new GridPane();
-    
-    // CONSTRUCTOR
+
     public PembayaranRiwayatCell() {
         setupCard();
     }
-    
-    // SETUP - Dipanggil SEKALI di constructor
+
+    /**
+     * Konfigurasi UI components (dipanggil sekali saat konstruksi)
+     */
     private void setupCard() {
         cardContainer.getStyleClass().add("pesanan-card");
         cardContainer.setSpacing(12);
 
-        // ===== STYLING =====
         orderIdLabel.getStyleClass().add("pesanan-order-id");
         metodeLabel.getStyleClass().add("pesanan-order-date");
         statusBadge.getStyleClass().addAll("status-badge", "status-selesai");
@@ -43,13 +45,11 @@ public class PembayaranRiwayatCell extends ListCell<Pesanan> {
         jumlahValue.getStyleClass().add("pesanan-value");
         totalValue.getStyleClass().add("pesanan-total");
 
-        // ===== BUILD HEADER =====
         VBox leftHeader = new VBox(2, orderIdLabel, metodeLabel);
         HBox.setHgrow(leftHeader, Priority.ALWAYS);
         headerBox.setAlignment(Pos.CENTER_LEFT);
         headerBox.getChildren().addAll(leftHeader, statusBadge);
 
-        // ===== BUILD INFO GRID =====
         infoGrid.setHgap(30);
         infoGrid.setVgap(8);
         infoGrid.setPadding(new Insets(10, 0, 0, 0));
@@ -65,11 +65,9 @@ public class PembayaranRiwayatCell extends ListCell<Pesanan> {
         infoGrid.add(new VBox(3, jumlahLabel, jumlahValue), 1, 0);
         infoGrid.add(new VBox(3, totalLabel, totalValue), 2, 0);
 
-        // ===== ASSEMBLE CARD - SEKALI SAJA =====
         cardContainer.getChildren().addAll(headerBox, infoGrid);
     }
-    
-    // UPDATE ITEM - Dipanggil setiap kali data berubah
+
     @Override
     protected void updateItem(Pesanan pesanan, boolean empty) {
         super.updateItem(pesanan, empty);
@@ -79,19 +77,14 @@ public class PembayaranRiwayatCell extends ListCell<Pesanan> {
             return;
         }
 
-        // hanya update data, tidak perlu rebuild UI
         DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-        NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(new Locale("id", "ID"));
+        NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(Locale.of("id", "ID"));
 
-        // Format: "ORD-001 - Nama Pelanggan"
-        orderIdLabel.setText("ORD-" + String.format("%03d", pesanan.getIdPesanan()) + 
-                           " - " + pesanan.getNamaPelanggan());
+        orderIdLabel.setText("ORD-" + String.format("%03d", pesanan.getIdPesanan()) +
+                " - " + pesanan.getNamaPelanggan());
 
-        // Format: "Metode Pembayaran • Tanggal Verifikasi"
         String tanggalText = pesanan.getSpesifikasi() + " • " +
-                (pesanan.getUpdatedAt() != null ? 
-                 pesanan.getUpdatedAt().format(dateFormatter) : 
-                 "");
+                (pesanan.getUpdatedAt() != null ? pesanan.getUpdatedAt().format(dateFormatter) : "");
         metodeLabel.setText(tanggalText);
 
         layananValue.setText(pesanan.getJenisLayanan());
